--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "1.8.1",
     "install": "^0.13.0",
     "lucide-vue-next": "^0.461.0",
     "nuxt": "^3.14.1592",
